style.css
/*Imago, Henry Jack, 2018. All rights reserved.*/

* { box-sizing: border-box; }
body { font-family: "Arial", sans-serif !important; max-width: 100%; overflow-x: hidden; min-height: 100%; }
.frm-image { width: 100%; }
.row { display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; }
.column { -ms-flex: 33%; flex: 33%; max-width: 33%; padding-left: 1%; }
.column img { margin-top: 18px; vertical-align: middle; padding-left: 8px; padding-right: 8px; }
@media screen and (max-width: 800px) { .column { -ms-flex: 50%; flex: 50%; max-width: 50%; } }
@media screen and (max-width: 600px) { .column { -ms-flex: 100%; flex: 100%; max-width: 100%; }}

.close2 { position: fixed; top: 80px; right: 40px; color: #706f6f; font-size: 30px; font-weight: bold; }
.close2:hover { font-size: 31px; color: #000; }

.tab { overflow: hidden; background-color: #fff; border-radius: 10px; }
.tab button { background-color: inherit; float: left; border: none; outline: none; padding: 14px 16px; transition: 0.3s; }
.tablinks { text-align: center; margin: 0px 40px; float: left; display: inline-block; font-size: 17px; color: #000; }
.tab button:hover { background-color: #55B4B0; cursor: pointer; }
.tab button.active { background-color: #95DEE3; }
.tabcontent { display: none; padding: 6px 12px; border-top: none; text-align: center; }
.tabtitle { font-family: "Arial", sans-serif; font-size: 28px; }

.navbar, .navbar-default, .navbar-light { position: fixed; width: 100%; background: #fff; background-color: #fff; z-index: 2; }
.searchnavbtn:hover { background-color: #fff !important; color: #fff !important; }

.fas, .nav-link { display: inline-block; }
.fas { color: #28A745}
.nav-item { margin: 0px 70px; }
.nav-link { color: #4A4A4B !important; } .nav-link:hover { color: #2b5eaf !important; }
.upload-icon { background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59); -webkit-background-clip: text; -webkit-text-fill-color: transparent;  }
.user-icon { background: linear-gradient(to right, #4e54c8, #8f94fb); -webkit-background-clip: text; -webkit-text-fill-color: transparent;  } 
.upload-class { border: 1px solid rgba(194, 194, 194, .5); border-radius: 12px; padding: 2px 6px; margin: -2px -6px; max-width: 160px; margin-bottom: 3px; }
.nav-item { padding-top: 3px; }
.bottomnavmargin { margin-bottom: 60px; } .bottomtabsmargin { margin-bottom: 25px; }

#imgx { border-radius: 10px; cursor: pointer; transition: 0.3s; }
.modal { display: none; position: fixed; z-index: 1; padding-top: 120px; left: 0; top: 0; width: 100%; height: 100%; }
.modal { overflow: auto; background-color: rgb(0, 0, 0); background-color: rgba(0, 0, 0, 0.9); }
.modal-content { margin: auto; display: block; width: auto; max-width: 80%; max-height: 80%; border: 1px solid white; }
#captionNew, #captionTrend { margin: auto; display: block; width: 80%; text-align: center; color: #ccc; padding: 10px 0; height: 150px; }
.modal-content, #captionNew, #captionTrend { animation-name: zoom; animation-duration: 0.4s; }
.closeNew, .closeTrend { position: absolute; top: 80px; right: 40px; color: #706f6f; font-size: 30px; font-weight: bold; }
.closeNew:hover, .closeTrend:hover, .closeNew:focus, .closeTrend:focus { color: #fff; font-size: 32px; text-decoration: none; cursor: pointer; }
@keyframes zoom { from { transform: scale(0) } to { transform: scale(1) } }

.ultext { text-decoration: none; position: relative; }
.ultext:after { content: ''; position: absolute; bottom: 2px; left: 0; width: 0%; border-bottom: 2px solid #2b5eaf; transition: 0.1s; }
.ultext:hover:after { width: 100%; }

@media (min-width: 1200px){
    .navbar-expand-custom { flex-direction: row; flex-wrap: nowrap; justify-content: flex-start; }
    .navbar-expand-custom .navbar-nav { flex-direction: row; }
    .navbar-expand-custom .navbar-nav .nav-link { padding-right: .5rem; padding-left: .5rem; }
    .navbar-expand-custom .navbar-collapse { display: flex !important; }
    .navbar-expand-custom .navbar-toggler { display: none; }
}

.form { position: relative; z-index: 1; background: #FFFFFF; max-width: 350px; margin: 0 auto 100px; padding: 30px; margin-top: 125px; }
.form { border-radius: 10px; text-align: center; }
.form .thumbnail { background: #EF3B3A; width: 150px; height: 150px; margin: 0 auto 30px; padding: 50px 30px; }
.form .thumbnail { border-radius: 100%;  box-sizing: border-box; }
.form .thumbnail img { display: block; width: 100%; }
.form input { outline: 0; background: #f2f2f2; width: 100%; border: 0; margin: 0 0 15px; }
.form input  { padding: 15px; border-radius: 3px;  box-sizing: border-box; font-size: 14px; }
.formconnect .cb { outline: 0; width: 100%; border: 0; padding: 15px; border-radius: 3px; color: #FFFFFF; font-size: 14px; cursor: pointer; transition: all 0.1 ease; }
.formconnect .cb { background: -webkit-linear-gradient(to right, #56ab2f, #a8e063); background: linear-gradient(to right, #56ab2f, #a8e063); }
.form .message { margin: 15px 0 0; color: #b3b3b3; font-size: 14px; }
.form .message a { color: #56ab2f; text-decoration: underline; font-size: 14px; }
.form .register-form { display: none; }
.container { position: relative; z-index: 1; max-width: 300px; margin: 0 auto; }
.container:before, .container:after { content: ""; display: block; clear: both; }
.container .info { margin: 20px 30px 50px 30px; text-align: center; }
.container .info h1 { margin: 0 0 15px; padding: 0; font-size: 36px; font-weight: 300; color: #1a1a1a; }
.container .info span { color: #4d4d4d; font-size: 12px; }
.container .info span a { color: #000000; text-decoration: none; }
.container .info span .fa { color: #EF3B3A; }
.connect-master { background: #ccc; font-family: "Roboto", sans-serif; }
.connect-master { content: ""; position: fixed; top: 0; left: 0; display: block; background: rgba(204, 204, 204, 0.3); width: 100%; height: 100%; }
.container-fluid { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); }

